compiler/weave_syntax/tests/data/syntax/declarations/arguments.error
error: Expected '[token:identifier]'
        --> <source>:3:15
         |
       3 |     #[unused] ,
         |               ^
